@@ -57,10 +57,3 @@
 	- Verify that they can be resolved
 
  - Include ajaxterm in Webmin
-
- - Allow web and SSL ports to be changed via API
-	- https://www.virtualmin.com/node/17811
-
- - Fix upstart support
-	- http://www.virtualmin.com/node/17831
-	- webmin.com / facebook
